[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsmeter-sdk"
version = "0.1.0b1"
description = "Official opsmeter.io Python SDK: one-time init + request context auto-instrumentation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Opsmeter" }]
keywords = ["opsmeter", "opsmeter.io", "llm", "observability", "cost-tracking", "openai", "anthropic", "telemetry", "no-proxy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/opsmeter-io/opsmeter.io-python-sdk"
Repository = "https://github.com/opsmeter-io/opsmeter.io-python-sdk"
Issues = "https://github.com/opsmeter-io/opsmeter.io-python-sdk/issues"

[tool.setuptools]
packages = ["opsmeter_sdk"]
